test/Fail/AmbiguousSet1.agda
{-# OPTIONS --no-import-sorts --prop #-}

open import Agda.Primitive renaming (Set to Set; Prop to Set₁)

test : Set₁
test = Set
